// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh jRSEhG"
  >
    text
    <span
      class="sc-guDLey hlLEiK"
      position="top-right"
      variant="dot"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh jRSEhG"
  >
    text
    <span
      class="sc-guDLey GpMG"
      position="top-right"
      variant="normal"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
